--- a/public/index.html
+++ b/public/index.html
@@ -294,139 +294,138 @@
                         <div class="country-code-wrapper">
                             <input type="text" id="customerCountryCodeSearch" class="country-code-search" placeholder="Search country..." autocomplete="off">
                             <select id="customerCountryCode" name="country_code" class="country-code-select">
-                            <option value="+1">🇺🇸 US +1</option>
-                            <option value="+1">🇨🇦 CA +1</option>
-                            <option value="+44">🇬🇧 +44</option>
-                            <option value="+33">🇫🇷 +33</option>
-                            <option value="+49">🇩🇪 +49</option>
-                            <option value="+39">🇮🇹 +39</option>
-                            <option value="+34">🇪🇸 +34</option>
-                            <option value="+31">🇳🇱 +31</option>
-                            <option value="+32">🇧🇪 +32</option>
-                            <option value="+41">🇨🇭 +41</option>
-                            <option value="+43">🇦🇹 +43</option>
-                            <option value="+45">🇩🇰 +45</option>
-                            <option value="+46">🇸🇪 +46</option>
-                            <option value="+47">🇳🇴 +47</option>
-                            <option value="+358">🇫🇮 +358</option>
-                            <option value="+351">🇵🇹 +351</option>
-                            <option value="+30">🇬🇷 +30</option>
-                            <option value="+48">🇵🇱 +48</option>
-                            <option value="+420">🇨🇿 +420</option>
-                            <option value="+36">🇭🇺 +36</option>
-                            <option value="+385">🇭🇷 +385</option>
-                            <option value="+386">🇸🇮 +386</option>
-                            <option value="+421">🇸🇰 +421</option>
-                            <option value="+372">🇪🇪 +372</option>
-                            <option value="+371">🇱🇻 +371</option>
-                            <option value="+370">🇱🇹 +370</option>
-                            <option value="+7">🇷🇺 +7</option>
-                            <option value="+380">🇺🇦 +380</option>
-                            <option value="+375">🇧🇾 +375</option>
-                            <option value="+373">🇲🇩 +373</option>
-                            <option value="+374">🇦🇲 +374</option>
-                            <option value="+995">🇬🇪 +995</option>
-                            <option value="+994">🇦🇿 +994</option>
-                            <option value="+998">🇺🇿 +998</option>
-                            <option value="+996">🇰🇬 +996</option>
-                            <option value="+992">🇹🇯 +992</option>
-                            <option value="+993">🇹🇲 +993</option>
-                            <option value="+7">🇰🇿 +7</option>
-                            <option value="+86">🇨🇳 +86</option>
-                            <option value="+81">🇯🇵 +81</option>
-                            <option value="+82">🇰🇷 +82</option>
-                            <option value="+91">🇮🇳 +91</option>
-                            <option value="+92">🇵🇰 +92</option>
-                            <option value="+880">🇧🇩 +880</option>
-                            <option value="+94">🇱🇰 +94</option>
-                            <option value="+977">🇳🇵 +977</option>
-                            <option value="+975">🇧🇹 +975</option>
-                            <option value="+960">🇲🇻 +960</option>
-                            <option value="+66">🇹🇭 +66</option>
-                            <option value="+84">🇻🇳 +84</option>
-                            <option value="+855">🇰🇭 +855</option>
-                            <option value="+856">🇱🇦 +856</option>
-                            <option value="+95">🇲🇲 Myanmar +95</option>
-                            <option value="+65">🇸🇬 +65</option>
-                            <option value="+60">🇲🇾 +60</option>
-                            <option value="+62">🇮🇩 +62</option>
-                            <option value="+63">🇵🇭 +63</option>
-                            <option value="+673">🇧🇳 +673</option>
-                            <option value="+61">🇦🇺 +61</option>
-                            <option value="+64">🇳🇿 +64</option>
-                            <option value="+679">🇫🇯 +679</option>
-                            <option value="+685">🇼🇸 +685</option>
-                            <option value="+676">🇹🇴 +676</option>
-                            <option value="+678">🇻🇺 +678</option>
-                            <option value="+687">🇳🇨 +687</option>
-                            <option value="+689">🇵🇫 +689</option>
-                            <option value="+20">🇪🇬 +20</option>
-                            <option value="+27">🇿🇦 +27</option>
-                            <option value="+234">🇳🇬 +234</option>
-                            <option value="+233">🇬🇭 +233</option>
-                            <option value="+254">🇰🇪 +254</option>
-                            <option value="+255">🇹🇿 +255</option>
-                            <option value="+256">🇺🇬 +256</option>
-                            <option value="+250">🇷🇼 +250</option>
-                            <option value="+251">🇪🇹 +251</option>
-                            <option value="+252">🇸🇴 +252</option>
-                            <option value="+253">🇩🇯 +253</option>
-                            <option value="+291">🇪🇷 +291</option>
-                            <option value="+249">🇸🇩 +249</option>
-                            <option value="+211">🇸🇸 +211</option>
-                            <option value="+235">🇹🇩 +235</option>
-                            <option value="+236">🇨🇫 +236</option>
-                            <option value="+237">🇨🇲 +237</option>
-                            <option value="+240">🇬🇶 +240</option>
-                            <option value="+241">🇬🇦 +241</option>
-                            <option value="+242">🇨🇬 +242</option>
-                            <option value="+243">🇨🇩 +243</option>
-                            <option value="+244">🇦🇴 +244</option>
-                            <option value="+245">🇬🇼 +245</option>
-                            <option value="+238">🇨🇻 +238</option>
-                            <option value="+239">🇸🇹 +239</option>
-                            <option value="+220">🇬🇲 +220</option>
-                            <option value="+221">🇸🇳 +221</option>
-                            <option value="+222">🇲🇷 +222</option>
-                            <option value="+223">🇲🇱 +223</option>
-                            <option value="+224">🇬🇳 +224</option>
-                            <option value="+225">🇨🇮 +225</option>
-                            <option value="+226">🇧🇫 +226</option>
-                            <option value="+227">🇳🇪 +227</option>
-                            <option value="+228">🇹🇬 +228</option>
-                            <option value="+229">🇧🇯 +229</option>
-                            <option value="+230">🇲🇺 +230</option>
-                            <option value="+231">🇱🇷 +231</option>
-                            <option value="+232">🇸🇱 +232</option>
-                            <option value="+212">🇲🇦 +212</option>
-                            <option value="+213">🇩🇿 +213</option>
-                            <option value="+216">🇹🇳 +216</option>
-                            <option value="+218">🇱🇾 +218</option>
-                            <option value="+52">🇲🇽 +52</option>
-                            <option value="+54">🇦🇷 +54</option>
-                            <option value="+55">🇧🇷 +55</option>
-                            <option value="+56">🇨🇱 +56</option>
-                            <option value="+57">🇨🇴 +57</option>
-                            <option value="+58">🇻🇪 +58</option>
-                            <option value="+51">🇵🇪 +51</option>
-                            <option value="+593">🇪🇨 +593</option>
-                            <option value="+591">🇧🇴 +591</option>
-                            <option value="+595">🇵🇾 +595</option>
-                            <option value="+598">🇺🇾 +598</option>
-                            <option value="+597">🇸🇷 +597</option>
-                            <option value="+594">🇬🇫 +594</option>
-                            <option value="+592">🇬🇾 +592</option>
-                            <option value="+590">🇬🇵 +590</option>
-                            <option value="+596">🇲🇶 +596</option>
-                            <option value="+508">🇵🇲 +508</option>
-                            <option value="+502">🇬🇹 +502</option>
-                            <option value="+503">🇸🇻 +503</option>
-                            <option value="+504">🇭🇳 +504</option>
-                            <option value="+505">🇳🇮 +505</option>
-                            <option value="+506">🇨🇷 +506</option>
-                            <option value="+507">🇵🇦 +507</option>
-                            <option value="+501">🇧🇿 +501</option>
-                            <option value="+1">🇨🇦 +1</option>
+                            <option value="+1">United States +1</option>
+                            <option value="+1">Canada +1</option>
+                            <option value="+44">United Kingdom +44</option>
+                            <option value="+33">France +33</option>
+                            <option value="+49">Germany +49</option>
+                            <option value="+39">Italy +39</option>
+                            <option value="+34">Spain +34</option>
+                            <option value="+31">Netherlands +31</option>
+                            <option value="+32">Belgium +32</option>
+                            <option value="+41">Switzerland +41</option>
+                            <option value="+43">Austria +43</option>
+                            <option value="+45">Denmark +45</option>
+                            <option value="+46">Sweden +46</option>
+                            <option value="+47">Norway +47</option>
+                            <option value="+358">Finland +358</option>
+                            <option value="+351">Portugal +351</option>
+                            <option value="+30">Greece +30</option>
+                            <option value="+48">Poland +48</option>
+                            <option value="+420">Czech Republic +420</option>
+                            <option value="+36">Hungary +36</option>
+                            <option value="+385">Croatia +385</option>
+                            <option value="+386">Slovenia +386</option>
+                            <option value="+421">Slovakia +421</option>
+                            <option value="+372">Estonia +372</option>
+                            <option value="+371">Latvia +371</option>
+                            <option value="+370">Lithuania +370</option>
+                            <option value="+7">Russia +7</option>
+                            <option value="+380">Ukraine +380</option>
+                            <option value="+375">Belarus +375</option>
+                            <option value="+373">Moldova +373</option>
+                            <option value="+374">Armenia +374</option>
+                            <option value="+995">Georgia +995</option>
+                            <option value="+994">Azerbaijan +994</option>
+                            <option value="+998">Uzbekistan +998</option>
+                            <option value="+996">Kyrgyzstan +996</option>
+                            <option value="+992">Tajikistan +992</option>
+                            <option value="+993">Turkmenistan +993</option>
+                            <option value="+7">Kazakhstan +7</option>
+                            <option value="+86">China +86</option>
+                            <option value="+81">Japan +81</option>
+                            <option value="+82">South Korea +82</option>
+                            <option value="+91">India +91</option>
+                            <option value="+92">Pakistan +92</option>
+                            <option value="+880">Bangladesh +880</option>
+                            <option value="+94">Sri Lanka +94</option>
+                            <option value="+977">Nepal +977</option>
+                            <option value="+975">Bhutan +975</option>
+                            <option value="+960">Maldives +960</option>
+                            <option value="+66">Thailand +66</option>
+                            <option value="+84">Vietnam +84</option>
+                            <option value="+855">Cambodia +855</option>
+                            <option value="+856">Laos +856</option>
+                            <option value="+95">Myanmar +95</option>
+                            <option value="+65">Singapore +65</option>
+                            <option value="+60">Malaysia +60</option>
+                            <option value="+62">Indonesia +62</option>
+                            <option value="+63">Philippines +63</option>
+                            <option value="+673">Brunei +673</option>
+                            <option value="+61">Australia +61</option>
+                            <option value="+64">New Zealand +64</option>
+                            <option value="+679">Fiji +679</option>
+                            <option value="+685">Samoa +685</option>
+                            <option value="+676">Tonga +676</option>
+                            <option value="+678">Vanuatu +678</option>
+                            <option value="+687">New Caledonia +687</option>
+                            <option value="+689">French Polynesia +689</option>
+                            <option value="+20">Egypt +20</option>
+                            <option value="+27">South Africa +27</option>
+                            <option value="+234">Nigeria +234</option>
+                            <option value="+233">Ghana +233</option>
+                            <option value="+254">Kenya +254</option>
+                            <option value="+255">Tanzania +255</option>
+                            <option value="+256">Uganda +256</option>
+                            <option value="+250">Rwanda +250</option>
+                            <option value="+251">Ethiopia +251</option>
+                            <option value="+252">Somalia +252</option>
+                            <option value="+253">Djibouti +253</option>
+                            <option value="+291">Eritrea +291</option>
+                            <option value="+249">Sudan +249</option>
+                            <option value="+211">South Sudan +211</option>
+                            <option value="+235">Chad +235</option>
+                            <option value="+236">Central African Republic +236</option>
+                            <option value="+237">Cameroon +237</option>
+                            <option value="+240">Equatorial Guinea +240</option>
+                            <option value="+241">Gabon +241</option>
+                            <option value="+242">Republic of the Congo +242</option>
+                            <option value="+243">Democratic Republic of the Congo +243</option>
+                            <option value="+244">Angola +244</option>
+                            <option value="+245">Guinea-Bissau +245</option>
+                            <option value="+238">Cape Verde +238</option>
+                            <option value="+239">São Tomé and Príncipe +239</option>
+                            <option value="+220">Gambia +220</option>
+                            <option value="+221">Senegal +221</option>
+                            <option value="+222">Mauritania +222</option>
+                            <option value="+223">Mali +223</option>
+                            <option value="+224">Guinea +224</option>
+                            <option value="+225">Côte d'Ivoire +225</option>
+                            <option value="+226">Burkina Faso +226</option>
+                            <option value="+227">Niger +227</option>
+                            <option value="+228">Togo +228</option>
+                            <option value="+229">Benin +229</option>
+                            <option value="+230">Mauritius +230</option>
+                            <option value="+231">Liberia +231</option>
+                            <option value="+232">Sierra Leone +232</option>
+                            <option value="+212">Morocco +212</option>
+                            <option value="+213">Algeria +213</option>
+                            <option value="+216">Tunisia +216</option>
+                            <option value="+218">Libya +218</option>
+                            <option value="+52">Mexico +52</option>
+                            <option value="+54">Argentina +54</option>
+                            <option value="+55">Brazil +55</option>
+                            <option value="+56">Chile +56</option>
+                            <option value="+57">Colombia +57</option>
+                            <option value="+58">Venezuela +58</option>
+                            <option value="+51">Peru +51</option>
+                            <option value="+593">Ecuador +593</option>
+                            <option value="+591">Bolivia +591</option>
+                            <option value="+595">Paraguay +595</option>
+                            <option value="+598">Uruguay +598</option>
+                            <option value="+597">Suriname +597</option>
+                            <option value="+594">French Guiana +594</option>
+                            <option value="+592">Guyana +592</option>
+                            <option value="+590">Guadeloupe +590</option>
+                            <option value="+596">Martinique +596</option>
+                            <option value="+508">Saint Pierre and Miquelon +508</option>
+                            <option value="+502">Guatemala +502</option>
+                            <option value="+503">El Salvador +503</option>
+                            <option value="+504">Honduras +504</option>
+                            <option value="+505">Nicaragua +505</option>
+                            <option value="+506">Costa Rica +506</option>
+                            <option value="+507">Panama +507</option>
+                            <option value="+501">Belize +501</option>
                         </select>
                         </div>
                         <input type="tel" id="customerPhone" name="phone" placeholder="Enter phone number">
