--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,7 @@
                 </div>
                 <div class="form-group">
                     <label for="productPrice">Price</label>
-                    <input type="number" id="productPrice" name="price" step="0.01" required>
+                    <input type="number" id="productPrice" name="price" step="1" min="0" required placeholder="Enter price in MMK">
                 </div>
                 <div class="form-group">
                     <label for="productStock">Stock Quantity</label>
