--- a/public/index.html
+++ b/public/index.html
@@ -108,15 +108,15 @@
                                 <div class="cart-summary">
                                     <div class="summary-row">
                                         <span>Subtotal:</span>
-                                        <span id="subtotal">$0.00</span>
+                                        <span id="subtotal">0 MMK</span>
                                     </div>
                                     <div class="summary-row">
                                         <span>Tax:</span>
-                                        <span id="tax">$0.00</span>
+                                        <span id="tax">0 MMK</span>
                                     </div>
                                     <div class="summary-row total">
                                         <span>Total:</span>
-                                        <span id="total">$0.00</span>
+                                        <span id="total">0 MMK</span>
                                     </div>
                                 </div>
                                 <div class="checkout-actions">
