Fix User Management Add User Issues

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
                             <i class="fas fa-users"></i>
                             Customers
                         </a></li>
-                        <li><a href="#" data-section="users" class="nav-link">
+                        <li><a href="#" data-section="users" class="nav-link" id="userManagementLink">
                             <i class="fas fa-user-cog"></i>
                             User Management
                         </a></li>
