--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,13 @@
                             <label for="password">Password</label>
                             <input type="password" id="password" name="password" required>
                         </div>
+                        <div class="form-group remember-group">
+                            <label class="remember-label">
+                                <input type="checkbox" id="rememberLogin" name="rememberLogin">
+                                <span class="remember-checkmark"></span>
+                                Remember Login
+                            </label>
+                        </div>
                         <button type="submit" class="btn btn-primary">
                             <i class="fas fa-sign-in-alt"></i>
                             Login
