--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,6 @@
                             <label for="password">Password</label>
                             <input type="password" id="password" name="password" required>
                         </div>
-                        <div class="form-group remember-group">
-                            <label class="remember-label">
-                                <input type="checkbox" id="rememberLogin" name="rememberLogin">
-                                <span class="remember-checkmark"></span>
-                                Remember Login
-                            </label>
-                        </div>
                         <button type="submit" class="btn btn-primary">
                             <i class="fas fa-sign-in-alt"></i>
                             Login
@@ -604,11 +597,13 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label class="checkbox-label">
-                        <input type="checkbox" id="userActive" name="is_active" checked>
-                        <span class="checkmark"></span>
-                        Enable User
-                    </label>
+                    <label for="userActive">Status</label>
+                    <div class="status-dropdown">
+                        <select id="userActive" name="is_active" required>
+                            <option value="1">Active</option>
+                            <option value="0">Inactive</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="modal-actions">
                     <button type="button" class="btn btn-outline modal-cancel">Cancel</button>
