--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,10 @@
                             <i class="fas fa-box"></i>
                             Products
                         </a></li>
+                        <li><a href="#" data-section="categories" class="nav-link">
+                            <i class="fas fa-tags"></i>
+                            Categories
+                        </a></li>
                         <li><a href="#" data-section="customers" class="nav-link">
                             <i class="fas fa-users"></i>
                             Customers
@@ -156,6 +160,32 @@
                                 </thead>
                                 <tbody id="productsTable">
                                     <!-- Products will be loaded here -->
+                                </tbody>
+                            </table>
+                        </div>
+                    </section>
+
+                    <!-- Categories Section -->
+                    <section id="categoriesSection" class="content-section">
+                        <div class="section-header">
+                            <h2>Product Categories</h2>
+                            <button id="addCategoryBtn" class="btn btn-primary">
+                                <i class="fas fa-plus"></i>
+                                Add Category
+                            </button>
+                        </div>
+                        <div class="table-container">
+                            <table class="data-table">
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Description</th>
+                                        <th>Products Count</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="categoriesTable">
+                                    <!-- Categories will be loaded here -->
                                 </tbody>
                             </table>
                         </div>
@@ -308,6 +338,29 @@
                         <option value="3">Clothing</option>
                         <option value="4">Food & Beverages</option>
                     </select>
+                </div>
+                <div class="modal-actions">
+                    <button type="button" class="btn btn-outline modal-cancel">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div id="categoryModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="categoryModalTitle">Add Category</h3>
+                <button class="modal-close">&times;</button>
+            </div>
+            <form id="categoryForm">
+                <div class="form-group">
+                    <label for="categoryName">Name</label>
+                    <input type="text" id="categoryName" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="categoryDescription">Description</label>
+                    <textarea id="categoryDescription" name="description" rows="3"></textarea>
                 </div>
                 <div class="modal-actions">
                     <button type="button" class="btn btn-outline modal-cancel">Cancel</button>
