--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MiniPOS System</title>
+    <link href="https://fonts.googleapis.com/css2?family=Pyidaungsu:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="./styles.css" rel="stylesheet">
 </head>
@@ -180,7 +181,6 @@
                                     <tr>
                                         <th>Name</th>
                                         <th>Description</th>
-                                        <th>Products Count</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
