--- a/public/index.html
+++ b/public/index.html
@@ -58,31 +58,31 @@
                     <ul class="nav-menu">
                         <li><a href="#" data-section="pos" class="nav-link active">
                             <i class="fas fa-shopping-cart"></i>
-                            Point of Sale
+                            <span>Point of Sale</span>
                         </a></li>
                         <li><a href="#" data-section="products" class="nav-link">
                             <i class="fas fa-box"></i>
-                            Products
+                            <span>Products</span>
                         </a></li>
                         <li><a href="#" data-section="categories" class="nav-link">
                             <i class="fas fa-tags"></i>
-                            Categories
+                            <span>Categories</span>
                         </a></li>
                         <li><a href="#" data-section="customers" class="nav-link">
                             <i class="fas fa-users"></i>
-                            Customers
+                            <span>Customers</span>
                         </a></li>
                         <li><a href="#" data-section="users" class="nav-link" id="userManagementLink">
                             <i class="fas fa-user-cog"></i>
-                            User Management
+                            <span>User Management</span>
                         </a></li>
                         <li><a href="#" data-section="sales" class="nav-link">
                             <i class="fas fa-receipt"></i>
-                            Sales History
+                            <span>Sales History</span>
                         </a></li>
                         <li><a href="#" data-section="reports" class="nav-link">
                             <i class="fas fa-chart-bar"></i>
-                            Reports
+                            <span>Reports</span>
                         </a></li>
                     </ul>
                 </aside>
