Update User Management icon design

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
                             Customers
                         </a></li>
                         <li><a href="#" data-section="users" class="nav-link" id="userManagementLink">
-                            <i class="fas fa-user-cog"></i>
+                            <i class="fas fa-users-cog"></i>
                             User Management
                         </a></li>
                         <li><a href="#" data-section="sales" class="nav-link">
