--- a/public/index.html
+++ b/public/index.html
@@ -56,33 +56,33 @@
             <div class="main-content">
                 <aside class="sidebar">
                     <ul class="nav-menu">
-                        <li><a href="#" data-section="pos" class="nav-link active">
+                        <li><a href="#" data-section="pos" class="nav-link active" title="Point of Sale">
                             <i class="fas fa-shopping-cart"></i>
-                            Point of Sale
+                            <span>Point of Sale</span>
                         </a></li>
-                        <li><a href="#" data-section="products" class="nav-link">
+                        <li><a href="#" data-section="products" class="nav-link" title="Products">
                             <i class="fas fa-box"></i>
-                            Products
+                            <span>Products</span>
                         </a></li>
-                        <li><a href="#" data-section="categories" class="nav-link">
+                        <li><a href="#" data-section="categories" class="nav-link" title="Categories">
                             <i class="fas fa-tags"></i>
-                            Categories
+                            <span>Categories</span>
                         </a></li>
-                        <li><a href="#" data-section="customers" class="nav-link">
+                        <li><a href="#" data-section="customers" class="nav-link" title="Customers">
                             <i class="fas fa-users"></i>
-                            Customers
+                            <span>Customers</span>
                         </a></li>
-                        <li><a href="#" data-section="users" class="nav-link" id="userManagementLink">
+                        <li><a href="#" data-section="users" class="nav-link" id="userManagementLink" title="User Management">
                             <i class="fas fa-users-cog"></i>
-                            User Management
+                            <span>User Management</span>
                         </a></li>
-                        <li><a href="#" data-section="sales" class="nav-link">
+                        <li><a href="#" data-section="sales" class="nav-link" title="Sales History">
                             <i class="fas fa-receipt"></i>
-                            Sales History
+                            <span>Sales History</span>
                         </a></li>
-                        <li><a href="#" data-section="reports" class="nav-link">
+                        <li><a href="#" data-section="reports" class="nav-link" title="Reports">
                             <i class="fas fa-chart-bar"></i>
-                            Reports
+                            <span>Reports</span>
                         </a></li>
                     </ul>
                 </aside>
