--- a/public/index.html
+++ b/public/index.html
@@ -72,10 +72,6 @@
                             <i class="fas fa-users"></i>
                             <span>Customers</span>
                         </a></li>
-                        <li><a href="#" data-section="users" class="nav-link" id="userManagementLink" title="User Management">
-                            <i class="fas fa-users-cog"></i>
-                            <span>User Management</span>
-                        </a></li>
                         <li><a href="#" data-section="sales" class="nav-link" title="Sales History">
                             <i class="fas fa-receipt"></i>
                             <span>Sales History</span>
@@ -83,6 +79,10 @@
                         <li><a href="#" data-section="reports" class="nav-link" title="Reports">
                             <i class="fas fa-chart-bar"></i>
                             <span>Reports</span>
+                        </a></li>
+                        <li><a href="#" data-section="settings" class="nav-link" id="settingsLink" title="Settings">
+                            <i class="fas fa-cog"></i>
+                            <span>Settings</span>
                         </a></li>
                     </ul>
                 </aside>
@@ -218,7 +218,62 @@
                     </section>
 
                     <!-- Users Section -->
+                    <section id="settingsSection" class="content-section">
+                        <div class="section-header">
+                            <h2>Settings</h2>
+                        </div>
+                        <div class="settings-grid">
+                            <div class="settings-card" onclick="showSettingsSubsection('users')">
+                                <div class="settings-card-icon">
+                                    <i class="fas fa-users-cog"></i>
+                                </div>
+                                <div class="settings-card-content">
+                                    <h3>User Management</h3>
+                                    <p>Manage system users, roles, and permissions</p>
+                                </div>
+                                <div class="settings-card-arrow">
+                                    <i class="fas fa-chevron-right"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+                    <!-- Users Subsection -->
                     <section id="usersSection" class="content-section">
+                        <div class="section-header">
+                            <h2>
+                                <button class="btn btn-outline" onclick="showSection('settings')" style="margin-right: 1rem;">
+                                    <i class="fas fa-arrow-left"></i>
+                                    Back to Settings
+                                </button>
+                                User Management
+                            </h2>
+                            <button id="addUserBtn" class="btn btn-primary">
+                                <i class="fas fa-plus"></i>
+                                Add User
+                            </button>
+                        </div>
+                        <div class="table-container">
+                            <table class="data-table">
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Username</th>
+                                        <th>Email</th>
+                                        <th>Role</th>
+                                        <th>Status</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="usersTable">
+                                    <!-- Users will be loaded here -->
+                                </tbody>
+                            </table>
+                        </div>
+                    </section>
+
+                    <!-- Legacy Users Section (keeping for compatibility) -->
+                    <section id="legacyUsersSection" class="content-section">
                         <div class="section-header">
                             <h2>User Management</h2>
                             <button id="addUserBtn" class="btn btn-primary">
