--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,19 @@
                                 <div class="product-grid" id="productGrid">
                                     <!-- Products will be loaded here -->
                                 </div>
+                                <div id="posPagination" class="pagination-container">
+                                    <div class="pagination-info">
+                                        <span id="posPageInfo">Showing 0 - 0 of 0 products</span>
+                                    </div>
+                                    <div class="pagination-controls">
+                                        <button id="posPrevBtn" class="pagination-btn">
+                                            <i class="fas fa-chevron-left"></i> Previous
+                                        </button>
+                                        <button id="posNextBtn" class="pagination-btn">
+                                            Next <i class="fas fa-chevron-right"></i>
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
                             <div class="pos-right">
                                 <div class="cart-header">
@@ -164,6 +177,19 @@
                                 </tbody>
                             </table>
                         </div>
+                        <div id="productsPagination" class="pagination-container">
+                            <div class="pagination-info">
+                                <span id="productsPageInfo">Showing 0 - 0 of 0 products</span>
+                            </div>
+                            <div class="pagination-controls">
+                                <button id="productsPrevBtn" class="pagination-btn">
+                                    <i class="fas fa-chevron-left"></i> Previous
+                                </button>
+                                <button id="productsNextBtn" class="pagination-btn">
+                                    Next <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </div>
+                        </div>
                     </section>
 
                     <!-- Categories Section -->
@@ -188,6 +214,19 @@
                                     <!-- Categories will be loaded here -->
                                 </tbody>
                             </table>
+                        </div>
+                        <div id="categoriesPagination" class="pagination-container">
+                            <div class="pagination-info">
+                                <span id="categoriesPageInfo">Showing 0 - 0 of 0 categories</span>
+                            </div>
+                            <div class="pagination-controls">
+                                <button id="categoriesPrevBtn" class="pagination-btn">
+                                    <i class="fas fa-chevron-left"></i> Previous
+                                </button>
+                                <button id="categoriesNextBtn" class="pagination-btn">
+                                    Next <i class="fas fa-chevron-right"></i>
+                                </button>
+                            </div>
                         </div>
                     </section>
 
