Fix responsive UI and search bar issues

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                 <div class="navbar-center">
                     <div class="search-bar">
                         <i class="fas fa-search"></i>
-                        <input type="text" placeholder="Search products, customers, orders...">
+                        <input type="text" id="globalSearch" placeholder="Search products, customers, orders...">
                     </div>
                 </div>
                 <div class="navbar-right">
